--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@
  @media (max-width:762px) {
      .nav-container {
          display: flex;
-         justify-content: space-evenly;
+         justify-content: space-around;
          align-items: center;
          position: fixed;
          bottom: 0;
@@ -150,6 +150,7 @@
      .nav-profile-img {
          width: 30px;
          height: 30px;
+         margin-bottom: 0.1rem;
          border-radius: 50%;
 
      }
@@ -182,7 +183,7 @@
      }
 
      .home-container {
-         margin: 2rem;
+         margin: 1.5rem;
          margin-bottom: 5rem;
      }
  }
@@ -233,4 +234,11 @@
      margin-top: 0.8rem;
      color: rgb(151, 153, 154);
      font-size: 14px;
+ }
+
+ @media (max-width:762px) {
+    .img-caption-text {
+        font-size: 16px;
+   
+    }
  }
