--- a/src/styles/loginSignUp.css
+++ b/src/styles/loginSignUp.css
@@ -1,34 +1,54 @@
 /* signup styling  */
 
-.main-signup-card{
+.main-signup-card {
     background-color: white;
-    height: 80vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     color: black;
+    padding-top: 2.5rem;
 }
 
 
-.sign-up-card{
-    border: 1px solid rgb(102, 100, 100);
+@media (max-width:762px) {
+
+    .main-signup-card {
+        background-color: white;
+        height: 80vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        padding-top: 0;
+    }
+
+}
+
+.sign-up-card {
+    border: 1px solid rgb(23, 44, 232);
     padding-bottom: 10px;
     width: 20rem;
     display: flex;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
- .email-box{
+.email-box {
     width: 14rem;
     height: 35px;
-    padding-left: 10px; 
-    border-radius: 5px; 
-    border: 1.5px solid rgb(125, 121, 121);
- }
+    padding-left: 10px;
+    border-radius: 5px;
+    border: 1.5px solid rgb(35, 168, 192);
+}
 
-.signup-bt{
+.email-text {
+    font-size: 16px;
+}
+
+.signup-bt {
     width: 100%;
     border-radius: 5px;
     border: none;
@@ -38,4 +58,22 @@
     width: 14rem;
     font-weight: 500;
     margin-top: 0.8rem;
+}
+
+.horizontal-line {
+
+    border: 2px solid rgb(46, 27, 212);
+    margin-bottom: 1.5rem;
+    border-radius: 50%;
+    height: 1px;
+    margin-top: 1rem;
+}
+
+
+#email-err-hide {
+    display: none;
+}
+
+#password-err-hide {
+    display: none;
 }
