--- a/src/styles/loginSignUp.css
+++ b/src/styles/loginSignUp.css
@@ -1,4 +1,4 @@
-/* signup styling  */
+/* signup and login styling  */
 
 .main-signup-card {
     background-color: white;
@@ -76,4 +76,22 @@
 
 #password-err-hide {
     display: none;
+}
+
+#spinner-card {
+    position: fixed;
+    left: 0;
+    top: 3.7rem;
+    width: 100vw;
+    height: 90vh;
+    background-color: black;
+    color: white;
+}
+
+@media (max-width:762px) {
+    #spinner-card {
+        top: 3.8rem;
+        height: 85vh;
+
+    }
 }
