--- a/src/styles/loginSignUp.css
+++ b/src/styles/loginSignUp.css
@@ -1,21 +1,21 @@
 /* signup and login styling  */
 
 .main-signup-card {
-   
+
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-   color: white;
+    color: white;
     padding-top: 2.5rem;
 }
 
- 
+
 @media (max-width:762px) {
 
     .main-signup-card {
-       
+
         height: 80vh;
         width: 100vw;
         display: flex;
@@ -26,7 +26,7 @@
 
 }
 
- 
+
 
 .sign-up-card {
     border: 1px solid rgb(23, 44, 232);
@@ -99,20 +99,22 @@
 }
 
 /* create profile page styling  */
-#create-profi-card{
+#create-profi-card {
     height: auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
 }
-.add-profile-first{
+
+.add-profile-first {
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
     margin-bottom: 15px;
-    
+    border: 1.5px solid rgb(207, 194, 194);
+
 }
 
-.add-profile-first1{
+.add-profile-first1 {
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
@@ -120,16 +122,54 @@
     display: flex;
     justify-content: center;
     align-items: center;
-   
+
     margin-bottom: 15px;
-    
+
 }
 
-#camera-icon{
+#camera-icon {
     position: absolute;
     top: 25px;
     cursor: pointer;
+}
 
-  
-    
+
+@media (min-width:762px) {
+    #profile-spin-card {
+        position: fixed;
+        left: 0;
+        top: 3.7rem;
+        width: 100vw;
+        height: 90vh;
+        background-color: black;
+        color: white;
+    }
+}
+
+
+@media (max-width:762px) {
+    #profile-spin-card {
+        position: fixed;
+        left: 0;
+        top: 3.8rem;
+        width: 100vw;
+        height: 85vh;
+        background-color: black;
+        color: white;
+
+    }
+}
+
+
+@media only screen and (max-width: 762px) and (min-width: 500px) {
+    #profile-spin-card {
+        position: fixed;
+        left: 0;
+        top: 0rem;
+        width: 100vw;
+        height: 100vh;
+        background-color: black;
+        color: white;
+
+    }
 }
