--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -39,7 +39,7 @@
         width: 10rem;
         height: 10rem;
         border-radius: 50%;
-        
+
     }
 
 
@@ -165,3 +165,48 @@
 
 
 }
+
+
+/* post modal styling  */
+.post-modal-card {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(63, 62, 62, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+    z-index: 2000;
+}
+
+.profile-post-img {
+    width: 350px;
+    height: 350px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.profile-post-card {
+    background-color: black;
+    height: fit-content;
+    width: fit-content;
+    padding: 15px;
+    border-radius: 10px;
+     
+}
+
+
+@media (max-width:762px) {
+    .profile-post-img {
+        width: 300px;
+        height: 300px;
+
+    }
+}
+
+
+
+@media screen and (max-width:762px) and (min-width:570px) {}
