--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -236,14 +236,24 @@
     margin-top: 2rem;
 }
 
-.message-input-in-post{
+.message-input-in-post {
     width: 40vw;
     border: none;
     border-radius: 5px;
     font-size: 18px;
     padding: 10px;
+   
 
 }
+
+
+.profile-img-in-post {
+    width: 40vw;
+    border-radius: 10px;
+    height: fit-content;
+    margin-top: 2rem;
+}
+
 @media (max-width:762px) {
 
     #post-card-in-post {
@@ -256,16 +266,20 @@
         gap: 10px;
         align-items: center;
         width: 90vw;
-        
+
     }
-    
-.message-input-in-post{
-    width: 90vw;
-    padding-left: 15px;
-    height: 35px;
-    border: none;
-    
-}
+
+    .message-input-in-post {
+        width: 90vw;
+        padding-left: 15px;
+        height: 35px;
+        border: none;
+
+    }
+
+    .profile-img-in-post {
+        width: 90vw;
+    }
 }
 
 .image-icon-in-post {
@@ -276,11 +290,13 @@
 
 }
 
- .send-post-bt{
-    width: 5rem;
+.send-post-bt {
+    width: 8rem;
     border: none;
     border-radius: 5px;
-    height: 30px;
+    height: 35px;
     font-weight: 500;
+    color: white;
+    
 
- }
+}
