--- a/src/App.css
+++ b/src/App.css
@@ -233,6 +233,7 @@
 
  .img-caption-text {
      font-size: 18px;
+     width:550px ;
 
  }
 
@@ -245,6 +246,6 @@
  @media (max-width:762px) {
      .img-caption-text {
          font-size: 16px;
-
+         width: 100%;
      }
  }
