--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -199,6 +199,13 @@
 
 }
 
+.img-caption-text-in-profile {
+    font-size: 18px;
+    width: 350px;
+    height: 20px;
+    overflow: auto;
+
+}
 
 @media (max-width:762px) {
     .profile-post-img {
@@ -206,7 +213,15 @@
         height: 300px;
 
     }
+
+    .img-caption-text-in-profile {
+        font-size: 16px;
+        width: 300px;
+
+    }
 }
+
+
 
 
 /* post component styling  */
@@ -242,7 +257,7 @@
     border-radius: 5px;
     font-size: 18px;
     padding: 10px;
-   
+
 
 }
 
@@ -297,6 +312,6 @@
     height: 35px;
     font-weight: 500;
     color: white;
-    
+
 
 }
