--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -315,3 +315,37 @@
 
 
 }
+
+
+/* otherprofile component styling  */
+
+.image-preview-card{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(31, 31, 31 ,0.9);
+     padding: 2rem;
+}
+
+.preview-img{
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+}
+
+@media (max-width:762px){
+    .preview-img{
+        width: 400px;
+        height: 400px;
+        margin-top: 0rem;
+        
+        
+    }
+}
