--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,5 +1,34 @@
 /* search style  */
 
+@media (min-width:762px) {
+    .search-card {
+        position: fixed;
+        background-color: black;
+        width: 30rem;
+        top: 2.5rem;
+
+    }
+
+    .users-results-card {
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.5rem;
+        align-items: flex-start;
+        width: 30rem;
+        padding-top: 5rem;
+        margin-top: 5rem;
+    }
+
+    .search-icon-in-search {
+        position: absolute;
+        left: 10px;
+        color: rgb(117, 113, 113);
+        top: 9px;
+        font-size: 23px;
+    }
+
+}
+
 .search-input-box {
     width: 23rem;
     height: 37px;
@@ -8,10 +37,15 @@
     border-bottom-left-radius: 5px;
     padding-left: 40px;
     font-size: 17px;
+    margin-bottom: 1rem;
+
 
 
 }
 
+#spinner-in-search {
+    height: 100vh;
+}
 
 .search-bt {
     width: 6rem;
@@ -26,19 +60,38 @@
 }
 
 
-.search-icon-in-search {
-    position: absolute;
-    left: 10px;
-    color: rgb(117, 113, 113);
-    top: 9px;
-    font-size: 23px;
-}
+
 
 @media (max-width:762px) {
+    .users-results-card {
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.5rem;
+        align-items: flex-start;
+        width: 28.6rem;
+    }
+
+    #spinner-in-search {
+        height: 50vh;
+    }
+
+    .search-icon-in-search {
+        position: absolute;
+        left: 10px;
+        color: rgb(117, 113, 113);
+        top: 26px;
+        font-size: 23px;
+    }
+
     .search-input-box {
         width: 15rem;
         height: 37px;
-        
+        margin-top: 1rem;
+
+    }
+
+    .users-results-card {
+        width: 100%;
     }
 
     .search-bt {
@@ -46,46 +99,47 @@
         height: 37px;
     }
 
-   
+
 }
 
 @media (max-width:500px) {
     .search-input-box {
-        width: 17rem;
+        width: 18rem;
         height: 37px;
-       
+
+
     }
 
     .search-bt {
-        width: 5rem;
+        width: 5.5rem;
         height: 37px;
     }
 
-   
+
 }
 
 
 @media (max-width:360px) {
     .search-input-box {
-        width: 16rem;
+        width: 15.5rem;
         height: 37px;
-       
+
     }
 
     .search-bt {
-        width: 4.5rem;
+        width: 5rem;
         height: 37px;
     }
 
-   
+
 }
 
 
 @media (max-width:320px) {
     .search-input-box {
-        width: 13rem;
+        width: 13.5rem;
         height: 37px;
-       
+
     }
 
     .search-bt {
@@ -93,5 +147,21 @@
         height: 37px;
     }
 
-   
+
+}
+
+@media (max-width:7602px) and (min-width : 500px) {
+    .search-input-box {
+        width: 23rem;
+        height: 37px;
+
+
+    }
+
+    .search-bt {
+        width: 5.5rem;
+        height: 37px;
+    }
+
+
 }
