--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -25,21 +25,22 @@
         color: rgb(117, 113, 113);
         top: 9px;
         font-size: 23px;
+        color: white;
+
     }
 
 }
 
 .search-input-box {
-    width: 23rem;
-    height: 37px;
+    width: 29rem;
+    height: 44px;
     border: none;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-radius: 5px;
     padding-left: 40px;
     font-size: 17px;
     margin-bottom: 1rem;
-
-
+    background-color: rgb(56, 55, 54);
+    color: white;
 
 }
 
@@ -47,22 +48,19 @@
     height: 100vh;
 }
 
-.search-bt {
-    width: 6rem;
-    height: 37px;
-    font-size: 17px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border: none;
-    background-color: rgb(74, 77, 76);
-    color: white;
-    font-weight: 500;
-}
 
 
 
 
 @media (max-width:762px) {
+
+    .search-card {
+        background-color: black;
+        width: 100%;
+
+
+    }
+
     .users-results-card {
         display: flex;
         flex-direction: column;
@@ -78,15 +76,17 @@
     .search-icon-in-search {
         position: absolute;
         left: 10px;
-        color: rgb(117, 113, 113);
-        top: 26px;
+        color: white;
+        top: 24px;
         font-size: 23px;
     }
 
     .search-input-box {
-        width: 15rem;
+        width: 100%;
         height: 37px;
         margin-top: 1rem;
+       
+
 
     }
 
@@ -94,74 +94,7 @@
         width: 100%;
     }
 
-    .search-bt {
-        width: 5rem;
-        height: 37px;
-    }
 
-
-}
-
-@media (max-width:500px) {
-    .search-input-box {
-        width: 18rem;
-        height: 37px;
-
-
-    }
-
-    .search-bt {
-        width: 5.5rem;
-        height: 37px;
-    }
-
-
-}
-
-
-@media (max-width:360px) {
-    .search-input-box {
-        width: 15.5rem;
-        height: 37px;
-
-    }
-
-    .search-bt {
-        width: 5rem;
-        height: 37px;
-    }
-
-
-}
-
-
-@media (max-width:320px) {
-    .search-input-box {
-        width: 13.5rem;
-        height: 37px;
-
-    }
-
-    .search-bt {
-        width: 4.5rem;
-        height: 37px;
-    }
-
-
-}
-
-@media (max-width:7602px) and (min-width : 500px) {
-    .search-input-box {
-        width: 23rem;
-        height: 37px;
-
-
-    }
-
-    .search-bt {
-        width: 5.5rem;
-        height: 37px;
-    }
 
 
 }
