--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -32,8 +32,9 @@
      background-color: rgb(56, 55, 54);
      color: white;
      padding: 10px;
-     
-     
+
+
+
  }
 
  .input-box-in-chat::-webkit-scrollbar {
@@ -74,10 +75,9 @@
          width: 100%;
          border: none;
          height: 40px;
-        
          font-size: 14px;
          color: white;
-        
+
      }
 
      .chat-send-bt {
@@ -99,16 +99,21 @@
          padding-left: 15px;
          margin-left: 15rem;
      }
+
+     .chat-text-main-card {
+         width: 23rem;
+         background-color: rgb(40, 43, 46);
+         padding: 10px;
+         margin-bottom: 2rem;
+         border-radius: 10px;
+     }
  }
 
+#chat-text-main-card1{
+    background-color: hsl(139, 79%, 9%);
+    box-shadow: none;
+}
 
- .chat-text-main-card {
-     width: 23rem;
-     box-shadow: 0 0 8px rgb(94, 93, 93);
-     padding: 10px;
-     margin-bottom: 2rem;
-     border-radius: 10px;
- }
 
  .chat-img-user-card {
      display: flex;
@@ -116,6 +121,7 @@
      column-gap: 11px;
      padding-bottom: 10px;
      border-bottom: 1px solid rgb(74, 73, 73);
+     
 
  }
 
@@ -139,20 +145,25 @@
      border-radius: 50%;
  }
 
+ .user-name-in-chat{
+    font-size: 18px;
+    color: white;
+ }
+
+ 
+
  @media (max-width:762px) {
      .message-main-card {
-         display: flex;
-         flex-direction: column;
-         align-items: flex-start;
          margin-bottom: 3rem;
      }
 
      .chat-text-main-card {
-         width: 20rem;
-         box-shadow: 0 0 8px rgb(94, 93, 93);
+         width: 100%;
+        background-color: rgb(40, 43, 46);
          padding: 12px;
          margin-bottom: 2rem;
          border-radius: 10px;
+
      }
 
  }
