--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -77,7 +77,6 @@
          height: 40px;
          font-size: 14px;
          color: white;
-
      }
 
      .chat-send-bt {
@@ -85,7 +84,6 @@
          height: 40px;
          font-size: 18px;
          background-color: rgb(56, 55, 54);
-
      }
  }
 
@@ -109,10 +107,26 @@
      }
  }
 
-#chat-text-main-card1{
-    background-color: hsl(139, 79%, 9%);
-    box-shadow: none;
-}
+ .go-down {
+     position: fixed;
+     bottom: 5.5rem;
+     right: 1rem;
+     background-color: rgb(203, 209, 203);
+     color: black;
+     border-radius: 50%;
+     height: 35px;
+     width: 35px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     text-decoration: none;
+
+ }
+
+ #chat-text-main-card1 {
+     background-color: hsl(139, 79%, 9%);
+     box-shadow: none;
+ }
 
 
  .chat-img-user-card {
@@ -121,7 +135,7 @@
      column-gap: 11px;
      padding-bottom: 10px;
      border-bottom: 1px solid rgb(74, 73, 73);
-     
+
 
  }
 
@@ -145,12 +159,12 @@
      border-radius: 50%;
  }
 
- .user-name-in-chat{
-    font-size: 18px;
-    color: white;
+ .user-name-in-chat {
+     font-size: 18px;
+     color: white;
  }
 
- 
+
 
  @media (max-width:762px) {
      .message-main-card {
@@ -159,7 +173,7 @@
 
      .chat-text-main-card {
          width: 100%;
-        background-color: rgb(40, 43, 46);
+         background-color: rgb(40, 43, 46);
          padding: 12px;
          margin-bottom: 2rem;
          border-radius: 10px;
