--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -54,6 +54,11 @@
 
  }
 
+ #spinner-in-chat {
+     height: 50vh;
+     width: 50vw;
+ }
+
  @media (max-width:762px) {
 
      .chat-container {
@@ -84,6 +89,10 @@
          height: 40px;
          font-size: 18px;
          background-color: rgb(56, 55, 54);
+     }
+
+     #spinner-in-chat {
+         height: 80vh;
      }
  }
 
