--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -92,7 +92,7 @@
      }
 
      #spinner-in-chat {
-        width: 100%;
+         width: 100%;
          height: 80vh;
      }
  }
@@ -148,7 +148,7 @@
  .chat-img-user-card {
      display: flex;
      align-items: center;
-     column-gap: 11px;
+     justify-content: space-between;
      padding-bottom: 10px;
      border-bottom: 1px solid rgb(74, 73, 73);
 
@@ -168,6 +168,18 @@
  .date-in-chat {
      font-size: 12px;
  }
+
+
+ .delete-icon-in-chat {
+     font-size: 18px;
+     margin-bottom: 0.3rem;
+     cursor: pointer;
+ }
+
+ .delete-icon-in-chat:hover {
+     color: red;
+ }
+
 
  .chat-user-img {
      width: 30px;
