--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -174,6 +174,7 @@
      font-size: 18px;
      margin-bottom: 0.3rem;
      cursor: pointer;
+     user-select: none;
  }
 
  .delete-icon-in-chat:hover {
