--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -218,3 +218,133 @@
      }
 
  }
+
+
+ /* all groups styling  */
+ @media (min-width:762px) {
+     .all-group-chat-sub-card {
+         display: flex;
+         width: 50vw;
+
+     }
+
+     .create-custom-group {
+         display: flex;
+         column-gap: 7px;
+         background-color: rgb(9, 126, 5);
+         align-items: center;
+         justify-content: center;
+         height: 40px;
+         width: 9rem;
+         border-radius: 5px;
+         cursor: pointer;
+         position: fixed;
+         right: 1rem;
+         top: 5rem;
+     }
+
+     .modal-create-custom-group {
+         position: fixed;
+         top: 4rem;
+         left: 0;
+         display: flex;
+         width: 100vw;
+         height: 100%;
+         justify-content: center;
+         align-items: center;
+         padding: 15px;
+         background-color: rgb(27, 25, 25, 0.7);
+         overflow: auto;
+         z-index: 1000;
+
+
+     }
+
+     .card{
+        
+        margin-top: 14rem;
+        margin-bottom: 2rem;
+     }
+ }
+
+
+ .chat-all-groups-card {
+     display: flex;
+     column-gap: 15px;
+     align-items: center;
+     text-decoration: none;
+     color: white;
+     border: 1px solid rgb(95, 89, 89);
+     width: 20rem;
+     height: 50px;
+     padding: 15px;
+     border-radius: 5px;
+
+ }
+
+ @media (max-width:762px) {
+     .all-group-chat-sub-card {
+         display: flex;
+         width: 100%;
+
+     }
+
+     .chat-all-groups-card {
+         display: flex;
+         column-gap: 15px;
+         align-items: center;
+         text-decoration: none;
+         color: white;
+         border: 1px solid rgb(95, 89, 89);
+         width: 100%;
+         height: 50px;
+         padding: 15px;
+         border-radius: 5px;
+
+     }
+
+
+
+
+ }
+
+ .chat-all-group-name {
+     font-size: 19px;
+     margin-top: 8px;
+ }
+
+ .create-custom-group-text {
+     font-size: 18px;
+     margin-top: 8px;
+
+ }
+
+ .create-custom-group {
+     display: flex;
+     column-gap: 7px;
+     background-color: rgb(9, 126, 5);
+     align-items: center;
+     justify-content: center;
+     height: 40px;
+     width: 9rem;
+     border-radius: 5px;
+     cursor: pointer;
+     position: fixed;
+     right: 1rem;
+     bottom: 4.5rem;
+ }
+
+
+ .modal-create-custom-group {
+     position: fixed;
+     top: 0rem;
+     left: 0;
+     display: flex;
+     width: 100vw;
+     height: 100vh;
+     justify-content: center;
+     align-items: center;
+     padding: 15px;
+     background-color: rgb(27, 25, 25, 0.7);
+     overflow: auto;
+ }
