--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -279,6 +279,7 @@
      height: 50px;
      padding: 15px;
      border-radius: 5px;
+     justify-content: space-between;
 
  }
 
@@ -294,6 +295,7 @@
          column-gap: 15px;
          align-items: center;
          text-decoration: none;
+         justify-content: space-between;
          color: white;
          border: 1px solid rgb(95, 89, 89);
          width: 100%;
@@ -308,6 +310,9 @@
 
 #group-hide-condition{
     display: none;
+}
+#group-show-condition{
+    display: block;
 }
 
  .all-group-chat-sub-card {
