--- a/src/styles/groupChat.css
+++ b/src/styles/groupChat.css
@@ -26,8 +26,6 @@
      width: 29rem;
      height: 45px;
      border: none;
-     border-top-left-radius: 5px;
-     border-bottom-left-radius: 5px;
      font-size: 17px;
      background-color: rgb(56, 55, 54);
      color: white;
@@ -54,6 +52,19 @@
 
  }
 
+ .camera-icon-in-chat {
+     width: 3rem;
+     height: 45px;
+     border: none;
+     border-top-left-radius: 5px;
+     border-bottom-left-radius: 5px;
+     background-color: rgb(56, 55, 54);
+     color: rgb(179, 167, 167);
+     padding: 10px;
+     cursor: pointer;
+
+ }
+
  #spinner-in-chat {
      height: 50vh;
      width: 50vw;
@@ -76,6 +87,20 @@
          background-color: black;
      }
 
+     .camera-icon-in-chat {
+         width: 3rem;
+         height: 40px;
+         border: none;
+         border-top-left-radius: 5px;
+         border-bottom-left-radius: 5px;
+         background-color: rgb(56, 55, 54);
+
+         font-size: 14px;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+     }
+
      .input-box-in-chat {
          width: 100%;
          border: none;
@@ -90,6 +115,8 @@
          font-size: 18px;
          background-color: rgb(56, 55, 54);
      }
+
+
 
      #spinner-in-chat {
          width: 100%;
@@ -308,12 +335,13 @@
  }
 
 
-#group-hide-condition{
-    display: none;
-}
-#group-show-condition{
-    display: block;
-}
+ #group-hide-condition {
+     display: none;
+ }
+
+ #group-show-condition {
+     display: block;
+ }
 
  .all-group-chat-sub-card {
      display: flex;
@@ -366,4 +394,45 @@
 
  .card {
      margin-bottom: 4rem;
+ }
+
+ /* personal group styling  */
+
+ .photo-card-in-personal {
+     position: fixed;
+     top: 0;
+     left: 0;
+     display: flex;
+     background-color: black;
+     justify-content: center;
+     align-items: center;
+     width: 100%;
+     height: 100%;
+
+ }
+
+ .photo-in-personal {
+     max-width: 100%;
+     height: 500px;
+
+ }
+
+ .photo-in-personal-chat {
+     width: 100%;
+     margin-bottom: 10px;
+ }
+
+ @media (max-width:762px) {
+     .photo-in-personal {
+         width: 100%;
+         height: fit-content;
+     }
+
+     .photo-card-in-personal {
+         align-items: center;
+         width: 100%;
+         padding: 10px;
+         height: 100%;
+
+     }
  }
