--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -319,7 +319,7 @@
 
 /* otherprofile component styling  */
 
-.image-preview-card{
+.image-preview-card {
     position: fixed;
     top: 0;
     left: 0;
@@ -328,11 +328,11 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: rgb(31, 31, 31 ,0.9);
-     padding: 2rem;
+    background-color: rgb(31, 31, 31, 0.9);
+    padding: 2rem;
 }
 
-.preview-img{
+.preview-img {
     width: 500px;
     height: 500px;
     border-radius: 50%;
@@ -340,31 +340,50 @@
     margin-bottom: 1rem;
 }
 
-@media (max-width:762px){
-    .preview-img{
+@media (max-width:762px) {
+    .preview-img {
         width: 315px;
         height: 315px;
         margin-top: 0rem;
-        
-        
+
+
     }
 }
 
+.id-card-for-id {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(61, 58, 58, 0.7);
+}
+
+#idCard-block {
+    display: none;
+}
+
+.id-card-hide {
+    display: none;
+}
 
 
 /* offcanvas styling  */
 
- .hori-in-profile{
+.hori-in-profile {
     color: rgb(109, 104, 104);
     background-color: darkolivegreen;
     margin-top: 0.7rem;
 
- }
+}
 
-.offcanvas-text{
+.offcanvas-text {
     font-size: 17px;
     color: rgb(243, 248, 246);
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
     margin-top: 0.2rem;
     margin-left: 5px;
