--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -72,6 +72,7 @@
     .post-img-in-pro {
         width: 18.1rem;
         height: 18.1rem;
+       
     }
 }
 
@@ -138,6 +139,7 @@
     .post-img-in-pro {
         width: 9.6rem;
         height: 7rem;
+        flex-grow: 1;
     }
 
 }
@@ -146,6 +148,7 @@
     .post-img-in-pro {
         width: 7.8rem;
         height: 7.8rem;
+        flex-grow: 1;
     }
 }
 
@@ -153,6 +156,7 @@
     .post-img-in-pro {
         width: 6.7rem;
         height: 6.8rem;
+        flex-grow: 1;
     }
 }
 
@@ -165,6 +169,7 @@
     .post-img-in-pro {
         width: 11.6rem;
         height: 11.6rem;
+        flex-grow: 1;
     }
 
 
